<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.example.hades.minitodo.aboutmodule.AboutActivity">

    <include layout="@layout/base_toolbar"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:id="@+id/aboutImageView"
        />
    <TextView
        android:text="@string/app_name"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/aboutVersionTextView"
        android:text="@string/app_version"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/made_by"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/contact_me"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="16dp"
        android:id="@+id/aboutContactMe"
        android:layout_marginTop="4dp"
        android:autoLink="email"
        android:linksClickable="true"
        android:text="@string/email_address"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
