<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hades.minitodo.addtodomodule.AddTodoActivity">

    <include layout="@layout/base_toolbar"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:background="?attr/colorPrimary"
                android:id="@+id/llAddTodoInputParent"
                android:orientation="vertical"
                >
                <com.example.hades.minitodo.view.CustomTextInputLayout
                    android:id="@+id/ctiAddTodoInputContainer"
                    android:gravity="center"
                    app:hintTextAppearance="@style/FloatingLabelTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etAddTodoInput"
                        android:hint="@string/title"
                        android:lines="2"
                        android:inputType="textAutoCorrect|textCapSentences"
                        android:maxLines="3"
                        android:textColor="@color/icons"
                        android:gravity="start|bottom"
                        android:layout_marginRight="32dp"
                        android:layout_marginLeft="32dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        />
                </com.example.hades.minitodo.view.CustomTextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddTodoDateContainer"
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginRight="42dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <ImageButton
                        android:layout_weight="0.4"
                        android:background="@android:color/transparent"
                        android:id="@+id/imgAddTodoReminderIcon"
                        android:padding="8dp"
                        android:src="@drawable/ic_add_alarm_grey_200_24dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:gravity="start"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:id="@+id/tvAddTodoReminderText"
                        android:text="@string/remind_me"
                        android:textSize="16dp"
                        android:textColor="@color/secondary_text"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switchAddTodoHasDate"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llAddTodoEnterDate"
                    android:animateLayoutChanges="true"
                    android:layout_weight="1"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="top"
                        android:layout_weight="1"
                        android:layout_height="0dp">

                        <Button
                            android:id="@+id/btnAddTodoDateChoose"
                            android:text="@string/choose_date"
                            android:background="@drawable/button_pressed_background"
                            android:textColor="@android:color/white"
                            android:layout_weight="1"
                            android:layout_marginRight="4dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                        <Button
                            android:layout_marginLeft="4dp"
                            android:id="@+id/btnAddTodoTimeChoose"
                            android:textColor="@android:color/white"
                            android:text="@string/choose_time"
                            android:background="@drawable/button_pressed_background"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <TextView
                        android:layout_weight="2"
                        android:id="@+id/llAddTodoTimeReminder"
                        android:textSize="14dp"
                        android:gravity="start"
                        android:text="@string/remind_date_and_time"
                        android:textColor="@color/secondary_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAddTodo"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_send_white_18dp"
            app:layout_anchor="@id/llAddTodoInputParent"
            app:layout_anchorGravity="bottom|right"
            app:fabSize="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
